--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -311,9 +311,9 @@ body {
         }
 
         input{
-        width:240px;
-        height:60px;
-        padding:0 60px 0;
+        width:290px;
+        height:55px;
+        padding:5px 10px 0 60px;
         margin:10px 10px;
         border: 1px solid #94846e;
         border-radius: 4px 4px 4px 4px;
@@ -361,4 +361,44 @@ body {
 
 
   }
+}
+
+.search {
+  margin: 20px 0;
+
+
+    & input{
+    position: absolute;
+    background:#fff;
+    border-radius: 10px 0 0 10px;
+    border:1px solid #fff;
+    width: 240px;
+    height: 55px;
+    font-family: 'SourceSansProLight', sans-serif;
+    font-size:24px;
+    padding: 5px 10px 0 20px;
+    -webkit-box-shadow:  0px 0px 14px 2px rgba(0, 0, 0, .2);
+    box-shadow:  0px 0px 14px 2px rgba(0, 0, 0, .2);
+    }
+    .InputIcon {
+        background: #97ce68;
+        color: #fff;
+        display: block;
+        height: 33px;
+        padding: 15px;
+        position: relative;
+        left: 267px;
+        text-align: center;
+        top: 0;
+        width: 104px;
+        z-index:1;
+        border-radius: 0 10px 10px 0;
+          span {
+              color: #fff;
+              font-size: 40px;
+              position: relative;
+
+          }
+
+        }
 }
