--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1514,9 +1514,9 @@ body {
 }
 /* line 313, ../sass/screen.scss */
 .login .login-form li input {
-  width: 240px;
-  height: 60px;
-  padding: 0 60px 0;
+  width: 290px;
+  height: 55px;
+  padding: 5px 10px 0 60px;
   margin: 10px 10px;
   border: 1px solid #94846e;
   border-radius: 4px 4px 4px 4px;
@@ -1558,4 +1558,44 @@ body {
   font-size: 40px;
   padding: 0 10px 0 0;
   vertical-align: middle;
+}
+
+/* line 366, ../sass/screen.scss */
+.search {
+  margin: 20px 0;
+}
+/* line 370, ../sass/screen.scss */
+.search input {
+  position: absolute;
+  background: #fff;
+  border-radius: 10px 0 0 10px;
+  border: 1px solid #fff;
+  width: 240px;
+  height: 55px;
+  font-family: 'SourceSansProLight', sans-serif;
+  font-size: 24px;
+  padding: 5px 10px 0 20px;
+  -webkit-box-shadow: 0px 0px 14px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 14px 2px rgba(0, 0, 0, 0.2);
+}
+/* line 383, ../sass/screen.scss */
+.search .InputIcon {
+  background: #97ce68;
+  color: #fff;
+  display: block;
+  height: 33px;
+  padding: 15px;
+  position: relative;
+  left: 267px;
+  text-align: center;
+  top: 0;
+  width: 104px;
+  z-index: 1;
+  border-radius: 0 10px 10px 0;
+}
+/* line 396, ../sass/screen.scss */
+.search .InputIcon span {
+  color: #fff;
+  font-size: 40px;
+  position: relative;
 }
